--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -75,19 +75,50 @@
   },
   "calculator": {
     "title": "Shopee Product Price Calculator",
-    "subtitle": "Enter product information to calculate optimal selling price and desired profit",
+    "subtitle": "Calculate costs and profits for selling on Shopee accurately",
     "form": {
       "title": "Product Information",
-      "costPrice": "Cost Price (VND)",
+      "productInfo": "Product Information",
+      "shopeeType": "Shopee Type:",
+      "shopeeMall": "Shopee Mall",
+      "shopeeRegular": "Regular Shopee",
+      "productName": "Product Name:",
+      "productNamePlaceholder": "Enter product name to search...",
+      "searching": "Searching...",
+      "selectCategory": "Select Category:",
+      "selectedProduct": "Selected Product:",
+      "category": "Category:",
+      "fixedFee": "Fixed Fee:",
+      "costPrice": "Product Cost Price (VND):",
       "costPricePlaceholder": "Enter product cost price",
-      "desiredProfit": "Desired Profit (VND)",
+      "desiredProfit": "Desired Profit (VND):",
       "desiredProfitPlaceholder": "Enter desired profit",
-      "shippingFee": "Shipping Fee (VND)",
+      "shippingFee": "Shipping Fee (VND):",
       "shippingFeePlaceholder": "Enter shipping fee",
       "shopeeCommission": "Shopee Commission (%)",
       "shopeeCommissionPlaceholder": "Enter Shopee commission %",
       "calculate": "Calculate",
       "reset": "Reset"
+    },
+    "settings": {
+      "title": "Shopee Settings",
+      "usePiShip": "Use Pi Ship:",
+      "yes": "Yes",
+      "no": "No",
+      "extraServices": "Extra Services:",
+      "contentXtra": "Content Xtra",
+      "voucherXtra": "Voucher Xtra"
+    },
+    "costs": {
+      "title": "Estimated Costs",
+      "adCost": "Marketing Cost (%):",
+      "adCostPlaceholder": "Enter marketing cost",
+      "shopVoucherFee": "Shop Voucher Fee (VND):",
+      "shopVoucherFeePlaceholder": "Enter shop voucher fee",
+      "returnRate": "Return Rate (%):",
+      "returnRatePlaceholder": "Enter return rate",
+      "desiredProfitPercent": "Desired Profit (%):",
+      "desiredProfitPercentPlaceholder": "Enter desired profit percentage"
     },
     "results": {
       "title": "Calculation Results",
@@ -103,10 +134,31 @@
         "medium": "Good profit margin. Consider increasing price for better optimization.",
         "low": "Low profit margin. Should review pricing strategy or find better suppliers."
       },
-      "placeholder": "Enter product information and click \"Calculate\" to see results"
+      "placeholder": "Enter product information and click \"Calculate\" to see results",
+      "costBreakdown": "Cost Breakdown",
+      "estimatedCosts": "Estimated Costs",
+      "shopeeCosts": "Shopee Costs",
+      "productFee": "Product Fee",
+      "paymentFee": "Payment Fee",
+      "shippingCost": "Shipping Cost",
+      "contentXtraFee": "Content Xtra Fee",
+      "voucherXtraFee": "Voucher Xtra Fee",
+      "infrastructureFee": "Infrastructure Fee",
+      "totalCosts": "Total Costs",
+      "finalPrice": "Final Selling Price",
+      "totalProfit": "Total Profit",
+      "profitPercentage": "Profit Percentage",
+      "item": "Item",
+      "amount": "Amount",
+      "percentageOnPrice": "% on selling price"
     },
     "validation": {
-      "costPriceRequired": "Please enter a valid cost price"
+      "costPriceRequired": "Please enter a valid cost price",
+      "productRequired": "Please select a product",
+      "categoryRequired": "Please select a category",
+      "shopeeTypeRequired": "Please select Shopee type",
+      "profitRequired": "Please enter a valid desired profit percentage",
+      "marketingCostInvalid": "Marketing cost is invalid"
     }
   },
   "footer": {
