--- a/src/locales/vi.json
+++ b/src/locales/vi.json
@@ -41,7 +41,7 @@
   },
   "home": {
     "hero": {
-      "title": "Công cụ tính giá Shopee",
+      "title": "Công cụ cân đối giá bán shopee",
       "titleHighlight": "Shopee",
       "subtitle": "Tối ưu lợi nhuận kinh doanh Shopee với công cụ tính giá chuyên nghiệp. Định giá sản phẩm chính xác, theo dõi đối thủ cạnh tranh và tăng doanh thu.",
       "ctaPrimary": "Bắt đầu tính giá ngay",
@@ -74,8 +74,8 @@
     }
   },
   "calculator": {
-    "title": "Công cụ tính giá bán Shopee 2025",
-    "subtitle": "Tính toán chi phí và lợi nhuận khi bán hàng trên Shopee một cách chính xác",
+    "title": "Công cụ cân đối giá bán shopee",
+    "subtitle": "Tính toán chi phí và lợi nhuận khi bán hàng trên Shopee với thông tin được cập nhật mới nhất",
     "form": {
       "title": "Thông tin sản phẩm",
       "productInfo": "Thông tin sản phẩm",
