--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -74,8 +74,8 @@
     }
   },
   "calculator": {
-    "title": "Shopee Product Price Calculator",
-    "subtitle": "Calculate costs and profits for selling on Shopee accurately",
+    "title": "Shopee Price Calculator Tool",
+    "subtitle": "Calculate costs and profits when selling on Shopee with the latest updated information",
     "form": {
       "title": "Product Information",
       "productInfo": "Product Information",
@@ -89,7 +89,7 @@
       "selectedProduct": "Selected Product:",
       "category": "Category:",
       "fixedFee": "Fixed Fee:",
-      "costPrice": "Product Cost Price (VND):",
+      "costPrice": "Cost Price (VND):",
       "costPricePlaceholder": "Enter product cost price",
       "desiredProfit": "Desired Profit (VND):",
       "desiredProfitPlaceholder": "Enter desired profit",
@@ -101,23 +101,23 @@
       "reset": "Reset"
     },
     "settings": {
-      "title": "Shopee Settings",
-      "usePiShip": "Use Pi Ship:",
+      "title": "Shopee Program Settings",
+      "usePiShip": "Pi Ship",
       "yes": "Yes",
       "no": "No",
-      "extraServices": "Extra Services:",
+      "extraServices": "Xtra Services:",
       "contentXtra": "Content Xtra",
       "voucherXtra": "Voucher Xtra"
     },
     "costs": {
       "title": "Estimated Costs",
-      "adCost": "Marketing Cost (%):",
+      "adCost": "Marketing Cost (%)",
       "adCostPlaceholder": "Enter marketing cost",
       "shopVoucherFee": "Shop Voucher Fee (VND):",
       "shopVoucherFeePlaceholder": "Enter shop voucher fee",
       "returnRate": "Return Rate (%):",
       "returnRatePlaceholder": "Enter return rate",
-      "desiredProfitPercent": "Desired Profit (%):",
+      "desiredProfitPercent": "Desired Profit (%)",
       "desiredProfitPercentPlaceholder": "Enter desired profit percentage"
     },
     "results": {
@@ -138,16 +138,16 @@
       "costBreakdown": "Cost Breakdown",
       "estimatedCosts": "Estimated Costs",
       "shopeeCosts": "Shopee Costs",
-      "productFee": "Product Fee",
+      "productFee": "Fixed Fee",
       "paymentFee": "Payment Fee",
-      "shippingCost": "Shipping Cost",
+      "shippingCost": "Pi Ship",
       "contentXtraFee": "Content Xtra Fee",
       "voucherXtraFee": "Voucher Xtra Fee",
       "infrastructureFee": "Infrastructure Fee",
-      "totalCosts": "Total Costs",
-      "finalPrice": "Final Selling Price",
+      "totalCosts": "Total Estimated Costs (based on suggested selling price)",
+      "finalPrice": "Suggested Selling Price",
       "totalProfit": "Total Profit",
-      "profitPercentage": "Profit Percentage",
+      "profitPercentage": "on selling price",
       "item": "Item",
       "amount": "Amount",
       "percentageOnPrice": "% on selling price"
