--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -213,7 +213,12 @@
     "phonePlaceholder": "Phone Number",
     "shopIssuePlaceholder": "Issue your shop is facing",
     "shopLinkPlaceholder": "Enter shop link",
-    "submitButton": "FREE SHOP CHECK-UP",
-    "processingText": "PROCESSING..."
+    "submitButton": "GET CONSULTATION",
+    "processingText": "PROCESSING...",
+    "validation": {
+      "nameRequired": "Please enter your full name",
+      "phoneRequired": "Please enter your phone number",
+      "phoneInvalid": "Invalid phone number format"
+    }
   }
 } 
