--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -112,7 +112,8 @@
       "extraServices": "Xtra Services:",
       "contentXtra": "Content Xtra",
       "voucherXtra": "Voucher Xtra",
-      "extraServicesNote": "When both services are selected, the system will calculate based on the higher fee"
+      "freeshipXtra": "Freeship Xtra (Mall only)",
+      "extraServicesNote": "When multiple services are selected, the system will calculate based on the highest fee"
     },
     "costs": {
       "title": "Estimated Costs",
@@ -148,6 +149,7 @@
       "shippingCost": "Pi Ship",
       "contentXtraFee": "Content Xtra Fee",
       "voucherXtraFee": "Voucher Xtra Fee",
+      "freeshipXtraFee": "Freeship Xtra Fee",
       "infrastructureFee": "Infrastructure Fee",
       "totalCosts": "Total Estimated Costs (based on suggested selling price)",
       "finalPrice": "Suggested Selling Price",
