--- a/src/locales/vi.json
+++ b/src/locales/vi.json
@@ -220,7 +220,9 @@
     "validation": {
       "nameRequired": "Vui lòng nhập họ và tên",
       "phoneRequired": "Vui lòng nhập số điện thoại",
-      "phoneInvalid": "Số điện thoại không đúng định dạng"
+      "phoneInvalid": "Số điện thoại không đúng định dạng",
+      "shopLinkRequired": "Vui lòng nhập link shop",
+      "shopLinkInvalid": "Link phải là trang shop Shopee hợp lệ (VD: https://shopee.vn/[tên-cửa-hàng] hoặc https://shopee.vn/shop/[id-cửa-hàng])"
     }
   }
 } 
